# spacy-och

./: .pre-commit-config.yaml  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
och/: __init__.py  config.cfg  examples.py  lex_attrs.py  stop_words.py
och/lookups/: och_numbers.json  och_numbers_lookup.json  och_phonemes.json  och_pinyin.json  och_variants.json  och_variants_lookup.json
spacy_och/: lex_attrs.py
spacy_och/lookups/: och_pinyin_lookup.json  och_variants_lookup.json
src/spacy_och/: __init__.py  config.cfg  examples.py  stop_words.py
src/spacy_och/lookups/: och_numbers.json  och_numbers_lookup.json  och_orth_variants.json  och_phonemes_lookup.json  och_pinyin.json
tests/: test_lang.py  test_lookups.py
