[metadata]
name = spacy_och
version = 0.1.0
description = Old Chinese language and models for spaCy NLP library
url = https://github.com/direct-phonology/spacy-och
author = Nick Budak
author_email = budak@stanford.edu
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    License :: OSI Approved :: MIT License
    Natural Language :: Chinese (Traditional)
    Operating System :: OS Independent
    Topic :: Text Processing :: Linguistic
    Topic :: Utilities

[options]
include_package_data = true
python_requires = >=3.6
install_requires = 
    spacy>=3

[options.extras_require]
dev = 
    pre-commit
    isort
    black

[options.entry_points]
spacy_languages =
    och = och:OldChinese