[metadata]
name = spacy-och
version = 0.1.0
description = the Old Chinese language for spaCy
url = https://github.com/direct-phonology/spacy-och
author = Nick Budak
author_email = budak@stanford.edu
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Natural Language :: Chinese (Traditional)
    Operating System :: OS Independent
    Topic :: Text Processing :: Linguistic
    Topic :: Utilities

[options]
package_dir =
    = spacy_och
packages = find:
include_package_data = true
python_requires = >=3.9
install_requires =
    spacy>=3

[options.packages.find]
where = spacy_och

[options.extras_require]
dev =
    pre-commit
    isort
    black

[options.entry_points]
spacy_languages =
    och = spacy_och:OldChinese
